--- a/.github/workflows/publish_package.yml
+++ b/.github/workflows/publish_package.yml
@@ -30,6 +30,6 @@ jobs:
         id: get_version
         uses: battila7/get-version-action@v2
       - name: 'Pack'
-        run: dotnet pack ${{ env.PROJECT_PATH }} --no-restore --configuration Release --include-symbols -p:PackageVersion=${{ steps.version.outputs.version-without-v }} --output ${{ env.PACKAGE_OUTPUT_DIRECTORY }}
+        run: dotnet pack ${{ env.PROJECT_PATH }} --no-restore --configuration Release --include-symbols -p:PackageVersion=${{ steps.get_version.outputs.version-without-v }} --output ${{ env.PACKAGE_OUTPUT_DIRECTORY }}
       - name: 'Push'
         run: dotnet nuget push ${{ env.PACKAGE_OUTPUT_DIRECTORY }}/*.nupkg --api-key ${{ secrets.NUGET_API }} --source ${{ env.NUGET_SOURCE_URL }} --skip-duplicate
